--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!doctype html>
 <html>
  <head>
-   <title>Index</title>
-   <link rel="stylesheet" href="/dist/styles.css">
-   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
+   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+   <title><%= htmlWebpackPlugin.options.title %></title>
  </head>
  <body>
-  
-  <script src="/dist/bundle.js"type="module"></script>
-  <script src="/dist/1.bundle.js"type="module"></script>
+ 
 
 </body>
 </html>
